--- a/TextAnalysiswithAmazonProductReviews.ipynb
+++ b/TextAnalysiswithAmazonProductReviews.ipynb
@@ -5576,27 +5576,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SVM Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=0.1, kernel='linear')"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "classifier = svm.SVC(kernel='linear', C=0.1)\n",
+    "classifier.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of this model is 0.9738651994497937\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "pred = classifier.predict(X_test)\n",
+    "accuracy = accuracy_score(pred, y_test)\n",
+    "print(\"Accuracy of this model is\", accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Text analysis with gensim and word2vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Word2Vec' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-56-ef77f6ccd0be>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#train model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWord2Vec\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentences\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmin_count\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Word2Vec' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word2Vec(vocab=231, vector_size=100, alpha=0.025)\n",
+      "['hair', 'oil', 'product', 'use', 'onion', 'good', 'hairfal', 'scalp', 'fall', 'time', 'mamaearth', '2', 'result', 'pretti', 'sure', 'shampoo', 'increas', 'give', 'review', 'smell', 'well', 'help', 'control', 'visibl', 'dens', 'hairloss', 'youtub', 'dandruff', 'watch', 'shine', 'month', 'money', 'recommend', 'one', '1', 'provid', 'night', 'root', 'best', 'better', 'strong', '4', 'order', 'look', 'stop', 'prevent', 'bought', 'effect', 'earth', 'mani', 'enough', 'first', 'bottl', 'custom', 'peopl', 'brand', 'go', 'ad', 'mama', 'influenc', 'twice', 'say', 'strength', 'newli', 'sticki', 'amount', 'navarathna', 'similar', 'low', 'three', 'badli', 'wash', 'half', '3', 'hairfallaft', 'prematur', 'appli', 'drop', 'thing', 'mask', 'second', 'expens', 'im', 'usag', 'months1', 'comment', 'worst', 'product2', 'lot3', 'brought', 'loss', 'view', 'noth', 'complet', 'ye', 'nutrient', 'mumbaik', 'erupt', 'problem', 'regular', 'avoid', 'dri', 'frizzi', 'make', 'thumb', 'buy', 'week', 'must', 'essenti', 'dryness', 'launch', 'also', 'strengthen', 'know', 'work', 'season', 'bad', 'fool', 'alreadi', 'trust', 'much', 'grey', 'cheat', 'fill', 'impress', 'arrest', 'nikhil4', 'color5', 'percentag', 'content', 'redensyl', 'ate', 'benefit', 'show', 'type', 'suitabl', 'hold', 'add', 'that', 'sulphur', 'rich', 'perfect', 'full', 'day', 'fake', 'purchas', 'issu', 'alli', 'anyth', 'find', 'con', 'bein', 'secondli', 'extract', 'shini', 'see', 'wait', 'suppos', 'end', 'search', 'date', 'till', 'think', 'bother', 'properli', 'soft', 'switchin', 'extrem', 'made', 'amaz', 'mention', 'applyin', 'juic', 'makin', 'method', 'convent', 'back', 'presenc', 'dark', 'total', 'togeth', 'nice', 'come', 'happi', 'realli', 'textur', 'chang', 'liter', 'healthi', 'differ', 'tri', 'return', 'solut', 'hair7', 'damag', 'wast', 'impact', 'lose', 'sinc', '5', 'suggest', 'take', 'never', 'misguid', 'color', 'packag', 'definit', 'get', 'lump', 'fragrance3', 'awkward', 'pungent', 'light', 'greasi', 'non', 'pro', 'morn', 'shower', 'everi', 'everyon', 'experi', 'last', 'final', 'forget', 'plan', 'roommat', 'lovemyself', 'insi', 'instagram', 'follow', 'hair6']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('pleas', 0.9990206360816956),\n",
+       " ('help', 0.9988667964935303),\n",
+       " ('find', 0.9987546801567078),\n",
+       " ('hope', 0.9987443089485168),\n",
+       " ('read', 0.9986335039138794),\n",
+       " ('let', 0.9985418915748596),\n",
+       " ('would', 0.9984633326530457),\n",
+       " ('mani', 0.9984595775604248),\n",
+       " ('vitamin', 0.9984244704246521),\n",
+       " ('click', 0.9984118342399597)]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import gensim\n",
+    "from gensim.models import Word2Vec\n",
+    "\n",
     "sentences = reviews_df['review_tokens'][10:20]\n",
     "sentences\n",
     "\n",
@@ -5614,36 +5682,36 @@
     "len(reviewsVec)\n",
     "\n",
     "#model = Word2Vec(reviewsVec,min_count=1, size=32)\n",
-    "model = Word2Vec(sentences=reviewsVec, vector_size=100,window=5, min_count=1, workers=4)\n",
-    "model.wv.most_similar('soothing')\n",
+    "# model = Word2Vec(sentences=reviewsVec, vector_size=100,window=5, min_count=1, workers=4)\n",
+    "# model.wv.most_similar('soothing')\n",
     "#model.most_similar('soothing')\n",
     "\n",
     "model = Word2Vec(sentences=reviewsVec, vector_size=100,window=5, min_count=1, workers=4)\n",
-    "model.wv.most_similar('packaging')\n",
+    "model.wv.most_similar('review')\n",
     "#model.most_similar('packaging')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('comes', 0.9981339573860168),\n",
-       " ('almost', 0.9981259703636169),\n",
-       " ('big', 0.9980919361114502),\n",
-       " ('first', 0.9980764389038086),\n",
-       " ('disappointed', 0.9980664253234863),\n",
-       " ('may', 0.9980360865592957),\n",
-       " ('also', 0.9980271458625793),\n",
-       " ('box', 0.9980116486549377),\n",
-       " ('easy', 0.9980063438415527),\n",
-       " ('smell', 0.9980019927024841)]"
+       "[('got', 0.9995785355567932),\n",
+       " ('rs', 0.9995126128196716),\n",
+       " ('deliv', 0.9994953870773315),\n",
+       " ('pack', 0.9994664192199707),\n",
+       " ('buy', 0.9994605183601379),\n",
+       " ('packag', 0.9994502067565918),\n",
+       " ('happi', 0.9994461536407471),\n",
+       " ('seller', 0.9994356036186218),\n",
+       " ('item', 0.9994354844093323),\n",
+       " ('box', 0.999434769153595)]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5651,30 +5719,30 @@
    "source": [
     "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
     "                 window=5, min_count=1, workers=4)\n",
-    "model.wv.most_similar('soothing')\n"
+    "model.wv.most_similar('product')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('go', 0.9996179938316345),\n",
-       " ('know', 0.9995916485786438),\n",
-       " ('used', 0.9995843768119812),\n",
-       " ('think', 0.9995830655097961),\n",
-       " ('working', 0.9995793700218201),\n",
-       " ('india', 0.9995773434638977),\n",
-       " ('colour', 0.9995657801628113),\n",
-       " ('people', 0.9995657801628113),\n",
-       " ('godrej', 0.9995655417442322),\n",
-       " ('box', 0.9995648860931396)]"
+       "[('box', 0.999740719795227),\n",
+       " ('return', 0.9997130036354065),\n",
+       " ('packet', 0.999681293964386),\n",
+       " ('seller', 0.9996751546859741),\n",
+       " ('pack', 0.9996594786643982),\n",
+       " ('rs', 0.9996441602706909),\n",
+       " ('order', 0.9996327757835388),\n",
+       " ('came', 0.999620258808136),\n",
+       " ('bought', 0.9996157288551331),\n",
+       " ('custom', 0.9996039271354675)]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5682,30 +5750,30 @@
    "source": [
     "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
     "                 window=5, min_count=1, workers=4)\n",
-    "model.wv.most_similar('reviews')"
+    "model.wv.most_similar('item')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('amazon', 0.9997013211250305),\n",
-       " ('good', 0.9996756911277771),\n",
-       " ('product', 0.999665379524231),\n",
-       " ('happy', 0.9996643662452698),\n",
-       " ('awesome', 0.9996640086174011),\n",
-       " ('quality', 0.9996459484100342),\n",
-       " ('price', 0.9996268153190613),\n",
-       " ('delivered', 0.9996193051338196),\n",
-       " ('box', 0.9996181726455688),\n",
-       " ('rs', 0.9996143579483032)]"
+       "[('box', 0.9996840953826904),\n",
+       " ('item', 0.9996808171272278),\n",
+       " ('return', 0.9996552467346191),\n",
+       " ('rs', 0.9996381402015686),\n",
+       " ('bought', 0.9996310472488403),\n",
+       " ('packet', 0.9996094703674316),\n",
+       " ('pack', 0.9995922446250916),\n",
+       " ('provid', 0.9995852708816528),\n",
+       " ('order', 0.9995757341384888),\n",
+       " ('small', 0.9995748996734619)]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5713,30 +5781,30 @@
    "source": [
     "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
     "                 window=5, min_count=1, workers=4)\n",
-    "model.wv.most_similar('packaging')\n"
+    "model.wv.most_similar('seller')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('box', 0.9978216886520386),\n",
-       " ('open', 0.9977834224700928),\n",
-       " ('seller', 0.9976537823677063),\n",
-       " ('contains', 0.9976045489311218),\n",
-       " ('poor', 0.9975900650024414),\n",
-       " ('comes', 0.9975778460502625),\n",
-       " ('inside', 0.9975758194923401),\n",
-       " ('battery', 0.9975619316101074),\n",
-       " ('either', 0.9975618124008179),\n",
-       " ('thick', 0.997558057308197)]"
+       "[('4', 0.9996417760848999),\n",
+       " ('item', 0.9996402263641357),\n",
+       " ('box', 0.9996386766433716),\n",
+       " ('1', 0.9996346235275269),\n",
+       " ('pack', 0.9996232390403748),\n",
+       " ('packet', 0.9996225237846375),\n",
+       " ('bought', 0.99961256980896),\n",
+       " ('100', 0.9996097683906555),\n",
+       " ('time', 0.9996005296707153),\n",
+       " ('safe', 0.9995948076248169)]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5744,7 +5812,7 @@
    "source": [
     "model = Word2Vec(sentences=reviewsVec, vector_size=100,\n",
     "                 window=5, min_count=1, workers=4)\n",
-    "model.wv.most_similar('rating')"
+    "model.wv.most_similar('order')"
    ]
   },
   {
