--- a/TextAnalysiswithAmazonProductReviews.ipynb
+++ b/TextAnalysiswithAmazonProductReviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4  I have been trying different onion oil for my ...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "(2782, 5)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "       'Reflex', 'MYSORE', 'Mysore'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x222b1b2af70>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x222c02a5e20>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -255,12 +255,12 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "sns.countplot(x='rating', data=reviews_df)\n"
+    "sns.countplot(x='rating', data=reviews_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "'I am writing this review after using it around 20 days It seems very natural and chemical free and is very gentle on skin But it does its job of cleaning the skin properly It contains tea tree which is one of my favourite ingredients for skin care Give it a try its definitely better than all other chemicals containing face washes And its even affordable as compared to other natural brands available in market '"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,118 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>asin</th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>review</th>\n",
-       "      <th>brandName</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>B07W7CTLD1</td>\n",
-       "      <td>Mamaearth-Onion-Growth-Control-Redensyl</td>\n",
-       "      <td>9/6/2019</td>\n",
-       "      <td>1</td>\n",
-       "      <td>I bought this hair oil after viewing so many g...</td>\n",
-       "      <td>Mamaearth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>B07W7CTLD1</td>\n",
-       "      <td>Mamaearth-Onion-Growth-Control-Redensyl</td>\n",
-       "      <td>8/14/2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Used This Mama Earth Newly Launched Onion Oil ...</td>\n",
-       "      <td>Mamaearth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>B07W7CTLD1</td>\n",
-       "      <td>Mamaearth-Onion-Growth-Control-Redensyl</td>\n",
-       "      <td>10/19/2019</td>\n",
-       "      <td>1</td>\n",
-       "      <td>So bad product My hair falling increase too mu...</td>\n",
-       "      <td>Mamaearth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>B07W7CTLD1</td>\n",
-       "      <td>Mamaearth-Onion-Growth-Control-Redensyl</td>\n",
-       "      <td>9/16/2019</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Product just smells similar to navarathna hair...</td>\n",
-       "      <td>Mamaearth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>B07W7CTLD1</td>\n",
-       "      <td>Mamaearth-Onion-Growth-Control-Redensyl</td>\n",
-       "      <td>8/18/2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>I have been trying different onion oil for my ...</td>\n",
-       "      <td>Mamaearth</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         asin                                     name        date  rating  \\\n",
-       "0  B07W7CTLD1  Mamaearth-Onion-Growth-Control-Redensyl    9/6/2019       1   \n",
-       "1  B07W7CTLD1  Mamaearth-Onion-Growth-Control-Redensyl   8/14/2019       5   \n",
-       "2  B07W7CTLD1  Mamaearth-Onion-Growth-Control-Redensyl  10/19/2019       1   \n",
-       "3  B07W7CTLD1  Mamaearth-Onion-Growth-Control-Redensyl   9/16/2019       1   \n",
-       "4  B07W7CTLD1  Mamaearth-Onion-Growth-Control-Redensyl   8/18/2019       5   \n",
-       "\n",
-       "                                              review  brandName  \n",
-       "0  I bought this hair oil after viewing so many g...  Mamaearth  \n",
-       "1  Used This Mama Earth Newly Launched Onion Oil ...  Mamaearth  \n",
-       "2  So bad product My hair falling increase too mu...  Mamaearth  \n",
-       "3  Product just smells similar to navarathna hair...  Mamaearth  \n",
-       "4  I have been trying different onion oil for my ...  Mamaearth  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# From the name we extract the brand\n",
-    "reviews_df['brandName'] = reviews_df['name'].str.split('-').str[0]\n",
-    "reviews_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +350,7 @@
        "Name: brandName, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
