--- a/updated codeTextAnalysiswithAmazonProductReviews.ipynb
+++ b/updated codeTextAnalysiswithAmazonProductReviews.ipynb
@@ -1515,7 +1515,7 @@
     }
    ],
    "source": [
-    "# Extracting the product from the name column\n",
+    "# Extracting the product from the name column.\n",
     "products = []\n",
     "for value in reviews_df['name']:\n",
     "    indx = len(value.split('-')[0])+1\n",
