word2vec last 3rd cell error is coming

--- a/updated codeTextAnalysiswithAmazonProductReviews.ipynb
+++ b/updated codeTextAnalysiswithAmazonProductReviews.ipynb
@@ -4636,7 +4636,7 @@
     "# model = Word2Vec(reviewsVec,min_count=1, size=32)\n",
     "# model = Word2Vec(sentences=reviewsVec, vector_size=100,window=5, min_count=1, workers=4)\n",
     "model.wv.most_similar('watch')\n",
-    "model.most_similar('watch')"
+    "model.most_similar('watch')\n"
    ]
   },
   {
